--- a/learn-m365-pr/paths/design-microsoft-365-tenant/index.yml
+++ b/learn-m365-pr/paths/design-microsoft-365-tenant/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.design-your-microsoft-365-tenant
 metadata:
-  title: Design your Microsoft 365 tenant
-  description: Design your Microsoft 365 tenant
-  ms.date: 04/14/2021
+  title: MS-100 Design your Microsoft 365 tenant
+  description: MS-100 Design your Microsoft 365 tenant
+  ms.date: 07/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Design your Microsoft 365 tenant
+title: MS-100 Design your Microsoft 365 tenant
 prerequisites: |
   - Students should have completed a role-based administrator training collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -23,13 +23,12 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
+- data-management
 - productivity
 - storage
-- data-management
 modules:
 - learn.wwl.plan-your-tenant-microsoft-365
 - learn.wwl.plan-your-premises-infrastructure-for-microsoft-365
