--- a/learn-m365-pr/paths/configure-your-microsoft-365-tenant/index.yml
+++ b/learn-m365-pr/paths/configure-your-microsoft-365-tenant/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.configure-your-microsoft-365-tenant
 metadata:
-  title: Configure your Microsoft 365 tenant
-  description: Configure your Microsoft 365 tenant
-  ms.date: 03/29/2022
+  title: MS-100 Configure your Microsoft 365 tenant
+  description: MS-100 Configure your Microsoft 365 tenant
+  ms.date: 07/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Configure your Microsoft 365 tenant
+title: MS-100 Configure your Microsoft 365 tenant
 prerequisites: |
   - Students should have completed a role-based administrator training collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -26,8 +26,8 @@ products:
 - m365
 - office-365
 subjects:
-- security
 - productivity
+- security
 modules:
 - learn.wwl.configure-your-microsoft-365-experience
 - learn.wwl.manage-user-accounts-licenses-microsoft-365
