--- a/learn-m365-pr/paths/manage-your-microsoft-365-tenant/index.yml
+++ b/learn-m365-pr/paths/manage-your-microsoft-365-tenant/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-your-microsoft-365-tenant
 metadata:
-  title: Manage your Microsoft 365 tenant
-  description: Manage your Microsoft 365 tenant
-  ms.date: 04/30/2022
+  title: MS-100 Manage your Microsoft 365 tenant
+  description: MS-100 Manage your Microsoft 365 tenant
+  ms.date: 07/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage your Microsoft 365 tenant
+title: MS-100 Manage your Microsoft 365 tenant
 prerequisites: |
   - Students should have completed a role-based administrator training collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
