--- a/learn-m365-pr/paths/implement-applications-external-access-azure-ad/index.yml
+++ b/learn-m365-pr/paths/implement-applications-external-access-azure-ad/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.implement-applications-external-access-azure-ad
 metadata:
-  title: Implement applications and external access in Azure AD
-  description: Implement applications and external access in Azure AD
-  ms.date: 04/27/2021
+  title: MS-100 Implement applications and external access in Azure AD
+  description: MS-100 Implement applications and external access in Azure AD
+  ms.date: 07/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Implement applications and external access in Azure AD
+title: MS-100 Implement applications and external access in Azure AD
 prerequisites: |
   - Students should have completed a role-based administrator training collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -23,12 +23,15 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
-- security
+- business-applications
+- cloud-computing
+- cloud-security
 - identity-access
+- infrastructure
+- security
 modules:
 - learn.wwl.implement-applications-azure-ad
 - learn.wwl.configure-azure-ad-application-proxy
