changed files by pdets auto publish service, publishid[519b1160-f47b-448c-8c00-3c4258a528e2] and do [publish].

--- a/learn-m365-pr/wwl/implement-windows-autopilot/2-explore-windows-autopilot.yml
+++ b/learn-m365-pr/wwl/implement-windows-autopilot/2-explore-windows-autopilot.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.implement-windows-autopilot.explore-windows-autopilot
+uid: learn.wwl.implement-windows-autopilot.explore
 title: Explore Windows Autopilot
 metadata:
   title: Explore Windows Autopilot
