Add extensions learn module to Learning path

--- a/learn-m365-pr/paths/m365-msgraph-associate/index.yml
+++ b/learn-m365-pr/paths/m365-msgraph-associate/index.yml
@@ -29,5 +29,6 @@ modules:
 - learn-m365.msgraph-access-file-data
 - learn-m365.msgraph-build-aspnetmvc-apps
 - learn-m365.msgraph-changenotifications-trackchanges
+- learn.msgraph-extensibility
 trophy:
   uid: learn-m365.msgraph-associate.trophy
