changed files by pdets auto publish service, publishid[f44a28c1-1248-4e62-a0db-27d1f7c7933a] and do [publish].

--- a/learn-m365-pr/wwl/examine-windows-10-deployment-scenarios/6-examine-traditional-deployment-methods.yml
+++ b/learn-m365-pr/wwl/examine-windows-10-deployment-scenarios/6-examine-traditional-deployment-methods.yml
@@ -4,12 +4,13 @@ title: Examine the traditional deployment methods
 metadata:
   title: Examine the traditional deployment methods
   description: "Examine the traditional deployment methods"
-  ms.date: 06/25/2021
+  ms.date: 07/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/6-examine-traditional-deployment-methods.md)]
