--- a/learn-m365-pr/wwl/examine-windows-10-deployment-scenarios/4-examine-modern-deployment-methods.yml
+++ b/learn-m365-pr/wwl/examine-windows-10-deployment-scenarios/4-examine-modern-deployment-methods.yml
@@ -4,12 +4,13 @@ title: Examine the modern deployment methods
 metadata:
   title: Examine the modern deployment methods
   description: "Examine the modern deployment methods"
-  ms.date: 06/25/2021
+  ms.date: 07/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/4-examine-modern-deployment-methods.md)]
