--- a/learn-m365-pr/wwl/examine-windows-10-deployment-scenarios/5-examine-dynamic-deployment-methods.yml
+++ b/learn-m365-pr/wwl/examine-windows-10-deployment-scenarios/5-examine-dynamic-deployment-methods.yml
@@ -4,12 +4,13 @@ title: Examine the dynamic deployment methods
 metadata:
   title: Examine the dynamic deployment methods
   description: "Examine the dynamic deployment methods"
-  ms.date: 06/25/2021
+  ms.date: 07/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 5
 content: |
   [!include[](includes/5-examine-dynamic-deployment-methods.md)]
@@ -20,10 +21,10 @@ quiz:
     choices:
     - content: "Each device will run Contoso's Windows 10 provisioning package to install Windows 10 Enterprise"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't what happens when the users sign in to their devices. Try again."
+      explanation: "Incorrect. This action isn't what happens when the users sign in to their devices."
     - content: "The operating system turns from Windows 10 Pro to Windows 10 Enterprise with no keys and no reboots"
       isCorrect: true
-      explanation: "That's correct. When a licensed user signs in to a device by using the Azure AD credentials associated with a Windows 10 Enterprise E3 or E5 license, the operating system turns from Windows 10 Pro to Windows 10 Enterprise with no keys and no reboots, and all the Windows 10 Enterprise features are unlocked."
+      explanation: "Correct. When a licensed user signs in to a device by using the Azure AD credentials associated with a Windows 10 Enterprise E3 or E5 license, the operating system turns from Windows 10 Pro to Windows 10 Enterprise with no keys and no reboots, and all the Windows 10 Enterprise features are unlocked."
     - content: "The operating system turns from Windows 10 Pro to Windows 10 Enterprise and each user will have to reboot their device to unlock the Windows 10 Enterprise features"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't what happens when the users sign in to their devices. Try again."
+      explanation: "Incorrect. This action isn't what happens when the users sign in to their devices."
