--- a/learn-m365-pr/paths/plan-your-windows-10-deployment-strategy/index.yml
+++ b/learn-m365-pr/paths/plan-your-windows-10-deployment-strategy/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.plan-your-windows-10-deployment-strategy
 metadata:
-  title: Plan your Windows devices deployment strategy
-  description: Plan your Windows devices deployment strategy
-  ms.date: 10/05/2021
+  title: MS-101 Plan your deployment strategy for Windows devices
+  description: MS-101 Plan your deployment strategy for Windows devices
+  ms.date: 07/22/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Plan your Windows devices deployment strategy
+title: MS-101 Plan your deployment strategy for Windows devices
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -24,16 +24,15 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
+- cloud-computing
+- compliance
 - device-management
 modules:
 - learn.wwl.examine-windows-10-deployment-scenarios
 - learn.wwl.implement-windows-autopilot
 - learn.wwl.plan-your-windows-10-subscription-activation-strategy
-- learn.wwl.resolve-windows-10-upgrade-errors
-- learn.wwl.introduction-to-desktop-analytics
 trophy:
   uid: learn.wwl.plan-your-windows-10-deployment-strategy.trophy
