--- a/learn-m365-pr/wwl/implement-compliance-for-microsoft-teams/11-knowledge-check.yml
+++ b/learn-m365-pr/wwl/implement-compliance-for-microsoft-teams/11-knowledge-check.yml
@@ -63,13 +63,13 @@ quiz:
       explanation: "That's correct. To define or edit information barrier policies, administrators must be assigned to one of the following roles - Microsoft 365 Global admin, Compliance administrator, and IB Compliance Management."
   - content: "Which of the following Microsoft 365 role groups can't view any alerts because none of the assigned roles provide permission to view alerts from any alert category?"
     choices:
-    - content: "Records Management"
+    - content: "Records Management role group"
       isCorrect: false
       explanation: "That's incorrect. The roles in this role group can view selected alerts."
-    - content: "Compliance Administrator"
+    - content: "Compliance Administrator role group"
       isCorrect: false
       explanation: "That's incorrect. The roles in this role group can view selected alerts."
-    - content: "eDiscovery Manager"
+    - content: "eDiscovery Manager role group"
       isCorrect: true
       explanation: "That's correct. Members of the eDiscovery Manager role group can't view any alerts because none of the assigned roles provide permission to view alerts from any alert category."
   - content: "Which of the following items is a principle of retention when more than one retention policy applies to the same content?"
@@ -96,7 +96,7 @@ quiz:
       explanation: "That's correct. An organization should use scoped directory searches when it has multiple companies within its tenant that it wants to keep separate."
   - content: "When a user does something that matches the conditions of an alert policy, the assigned alert action is triggered. For example, the alert action can be sending an email to all global administrators notifying them of what the user did to trigger the alert policy. Besides the user-defined alert action, another action automatically occurs when an alert action is triggered. What is this action?"
     choices:
-    - content: "An alert entry is created in the Alert dashboard in the Microsoft  Purview (previously Microsoft 365 Compliance center)"
+    - content: "An alert entry is created in the Alert dashboard in the Microsoft Purview compliance portal"
       isCorrect: true
       explanation: "That's correct. When an alert is generated, the according alert action is triggered, such as sending an email to all global administrators. An alert entry is also created in the alert dashboard in the Microsoft Purview."
     - content: "The user who triggered the alert policy is notified via email that their action is being reviewed"
