Pull request fixes
Updated badge UID in index (removed) and UID for Knowledge check

--- a/learn-m365-pr/m365/viva-goals-okr-coaching/knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/knowledge-check.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-goals-okr-essentials.knowledge-check
+uid: learn-m365.viva-goals-okr-coaching.knowledge-check
 title: Check your knowledge
 metadata:
   unitType: knowledge_check
