--- a/learn-m365-pr/paths/manage-content-search-investigations-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/manage-content-search-investigations-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.manage-content-search-investigations-microsoft-365
 metadata:
   title: Manage content search and investigations in Microsoft 365
   description: Manage content search and investigations in Microsoft 365
-  ms.date: 07/25/2022
+  ms.date: 07/26/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -14,7 +14,7 @@ prerequisites: |
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
   - Students must have a proficient understanding of general IT practices.
 summary: |
-  This learning path provides instruction on managing content search and investigations in Microsoft 365, including how to search for content in the Security and Compliance Center, conduct audit log investigations, and manage advanced eDiscovery.
+  This learning path provides instruction on managing content search and investigations in Microsoft 365, including how to search for content in the Microsoft Purview compliance portal, Microsoft Purview Audit, and Microsoft Purview eDiscovery.
 iconUrl: /learn/achievements/m365-content-search.svg
 levels:
 - intermediate
