--- a/learn-m365-pr/paths/configure-networking-windows-clients/index.yml
+++ b/learn-m365-pr/paths/configure-networking-windows-clients/index.yml
@@ -2,13 +2,13 @@
 uid: learn.wwl.configure-networking-windows-clients
 metadata:
   title: Configure networking on Windows clients
-  description: Configure networking on Windows clients
-  ms.date: 06/01/2022
+  description: MD-100 Configure networking on Windows clients
+  ms.date: 07/26/2022
   author: wwlpublish
-  ms.author: brhinkel
+  ms.author: rstearman
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Configure networking on Windows clients
+title: MD-100 Configure networking on Windows clients
 prerequisites: |
   - Students should have a basic understanding of computer networks and hardware concepts.
   - Students should have a basic understanding of OS and Application concepts.
