--- a/learn-m365-pr/paths/manage-apps-windows-updates/index.yml
+++ b/learn-m365-pr/paths/manage-apps-windows-updates/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-apps-windows-updates
 metadata:
-  title: Manage apps and Windows updates
-  description: Manage apps and Windows updates
-  ms.date: 06/01/2022
+  title: MD-100 Manage apps and Windows updates
+  description: MD-100 Manage apps and Windows updates
+  ms.date: 07/26/2022
   author: wwlpublish
-  ms.author: brhinkel
+  ms.author: rstearman
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage apps and Windows updates
+title: MD-100 Manage apps and Windows updates
 prerequisites: |
   - Students should have a basic understanding of computer networks and hardware concepts.
   - Students should have a basic understanding of OS and Application concepts.
